<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ru.makkarpov.ttdroid.settings.EditPlaceActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mp_edit_place_name"
        android:layout_alignParentTop="true"
        android:id="@+id/textView2" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameField"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mp_edit_wifi_networks"
        android:layout_below="@+id/nameField"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:id="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/networksField"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/nameField"
        android:inputType="none" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mp_edit_save"
        android:id="@+id/saveButton"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_alignParentBottom="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/networksList"
        android:layout_below="@+id/networksField"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/saveButton"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp" />

</RelativeLayout>
