<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?attr/listPreferredItemHeight"
    >

    <TwoLineListItem
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:mode="twoLine"
        android:paddingStart="?android:attr/listPreferredItemPaddingStart"
        android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
        android:paddingBottom="6dp">

        <TextView android:id="@android:id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="First line" />
        <TextView android:id="@android:id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@android:id/text1"
            android:layout_alignStart="@android:id/text1"
            android:textColor="#aaaaaa"
            android:textAppearance="?android:attr/textAppearanceListItemSecondary"
            android:text="second line" />

    </TwoLineListItem>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
        android:paddingBottom="8dp">


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/avg_route_time"
                android:layout_row="0"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0:00:00"
                android:id="@+id/avgPathTime"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/avg_wait_time"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginRight="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="0:00:00"
                android:id="@+id/avgWaitTime"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/extremely_long"
                android:id="@+id/textView6"
                android:layout_row="2"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="10 / 10"
                android:id="@+id/extremes"
                android:layout_row="2"
                android:layout_column="1"
                android:textIsSelectable="false"
                android:textColor="#000000" />

        </GridLayout>
    </RelativeLayout>

</LinearLayout>